--- a/KinectBinds/KinectBinds/App.xaml
+++ b/KinectBinds/KinectBinds/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="KinectCursor.App"
+﻿<Application x:Class="KinectBinds.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:KinectCursor"
+             xmlns:local="clr-namespace:KinectBinds"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
