--- a/KinectBinds/KinectBinds/MainWindow.xaml
+++ b/KinectBinds/KinectBinds/MainWindow.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="KinectCursor.MainWindow"
+﻿<Window x:Class="KinectBinds.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:KinectCursor"
+        xmlns:local="clr-namespace:KinectBinds"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="660" Closing="Window_Closing" Loaded="Window_Loaded">
+        Title="MainWindow" Height="500" Width="1280" Closing="Window_Closing" Loaded="Window_Loaded">
     <Grid>
         <Image x:Name="DisplayImage" HorizontalAlignment="Left" Height="480" VerticalAlignment="Top" Width="640"/>
+        <TextBlock x:Name="PositionText" HorizontalAlignment="Left" Margin="686,51,0,0" TextWrapping="Wrap" Text="init" VerticalAlignment="Top" FontSize="48" RenderTransformOrigin="0.517,0.12"/>
     </Grid>
 </Window>
